--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,9 @@ if(OPENGL_FOUND)
 	target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES})
 endif()
 
-set(SFML_STATIC_LIBRARIES TRUE)
+if(WIN32)
+	set(SFML_STATIC_LIBRARIES TRUE)
+endif()
 find_package(SFML 2 REQUIRED system window graphics audio)
 if(SFML_FOUND)
 	include_directories(${SFML_INCLUDE_DIR})
