--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 set(GAME_SOURCE_FILES
 	source/game/Asteroids.cpp
-	source/game/Scene.cpp
+	source/game/GameScene.cpp
 	source/game/Ship.cpp
 	source/game/Rock.cpp
 	source/game/Bullet.cpp
@@ -12,6 +12,7 @@ set(SYSTEM_SOURCE_FILES
 	source/system/GameObject.cpp
 	source/system/Event.cpp
 	source/system/Physics.cpp
+	source/system/Scene.cpp
 	source/system/Window.cpp
 	source/system/PhysicsObject.cpp
 	source/system/RenderableObject.cpp
