Fixed object management

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,8 @@ if(UNIX)
 	list( APPEND CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
 endif()
 
-source_group("Header Files\\game" FILES ${GAME_HEADER_FILES})
-source_group("Source Files\\game" FILES ${GAME_SOURCE_FILES})
+source_group("Header Files\\Game" FILES ${GAME_HEADER_FILES})
+source_group("Source Files\\Game" FILES ${GAME_SOURCE_FILES})
 source_group("Header Files\\System" FILES ${SYSTEM_HEADER_FILES})
 source_group("Source Files\\System" FILES ${SYSTEM_SOURCE_FILES})
 
