--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ include("source/CMakeLists.txt")
 add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${HEADER_FILES})
 
 if(UNIX)
-	list( APPEND CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
+	list( APPEND CMAKE_CXX_FLAGS "-std=g++14 ${CMAKE_CXX_FLAGS}")
 endif()
 
 source_group("Header Files\\Game" FILES ${GAME_HEADER_FILES})
